# fruit_detection

./: .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  device.py
backend/app/services/: image_detection.py  models.py  video_jobs.py
data/: link_dataset.txt  link_model.txt
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/ui/: button.tsx  card.tsx
notebooks/: object_detection.ipynb  yolo_object_detection.ipynb
schema/: schema_dataset.py  schema_progress.py
src/dataset/: build_fruit_quality_classification.py  build_fruit_yolo11.py  data_builder.py  data_builder_t.py  data_loader.py  dataset.py  fruit_quality_loader.py  utils.py
src/trainers/: train_fruit_yolo11.py
src/utils/: interface.py  progress.py
tools/: local_best2_realtime.py  local_yolo_detect.py
