[project]
name = "mlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.5.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow==12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.9",
    "pytz>=2026.2",
    "setuptools==81.0.0",
    "sympy==1.13.1",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tqdm>=4.68.3",
    "typing-extensions==4.15.0",
    "ultralytics>=8.4.77",
    "uv==0.11.23",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
